--- a/styles/styles.css
+++ b/styles/styles.css
@@ -154,3 +154,12 @@ button {
     padding-right: 36px;
     font-weight: bold;
 }
+
+/* Footer styling */
+.footer{
+    display: flex;
+    justify-content: center;
+    background-color: #1F2937;
+    color: #F9FAF8;
+    padding: 36px;
+}
