--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,8 +8,11 @@
     margin: 0;
     padding: 0;
 }
-html,body{
-    height: 100%;
+html{
+    min-height: 100dvh;
+}
+body{
+    flex-grow: 1;
 }
 /* Header and related contents to header  */
 
@@ -179,15 +182,11 @@ button {
     border:2px solid #F9FAF8;
 }
 
-/* Footer styling */
-/* .footer{
+/* Footer styling  */
+.footer{
     display: flex;
-    align-content: center;
-    flex-direction: column;
     background-color: #1F2937;
     color: #F9FAF8;
-    padding: 18px;    
-    align-self: flex-end;
-    margin-top: auto;
-
-} */
+    padding: 18px;  
+    justify-content: center; 
+}
